# intelligence-center-app-splunk-ta

./: .pre-commit-config.yaml  README.md  setup.cfg
Docs/: User Manual.md
TA-eclecticiq/: README.txt  app.manifest  splunkbase.manifest
TA-eclecticiq/README/: inputs.conf.spec  ta_eclecticiq_settings.conf.spec
TA-eclecticiq/appserver/static/: lookup_observables.js  setup_page.js
TA-eclecticiq/default/: alert_actions.conf  app.conf  collections.conf  commands.conf  inputs.conf  props.conf  restmap.conf  transforms.conf  web.conf  workflow_actions.conf
TA-eclecticiq/default/data/ui/alerts/: create_eclecticiq_sighting.html
TA-eclecticiq/default/data/ui/nav/: default.xml
TA-eclecticiq/default/data/ui/views/: configuration.xml  create_sighting_dashboard.xml  inputs.xml  lookup_observables.xml
doc/: USER_MANUAL.md
docs/: USER_MANUAL.md
sourcecode/TA-eclecticiq/: README.md  README.txt  app.manifest  splunkbase.manifest
sourcecode/TA-eclecticiq/README/: alert_actions.conf.spec
sourcecode/TA-eclecticiq/appserver/static/: create_sightings.js  custom_decorations.css  lookup_observables.js  setup_page.css  setup_page.js
sourcecode/TA-eclecticiq/appserver/static/javascript/: setup_page.js
sourcecode/TA-eclecticiq/appserver/static/javascript/views/: setup_view.js
sourcecode/TA-eclecticiq/appserver/static/styles/: setup_page.css
sourcecode/TA-eclecticiq/default/: alert_actions.conf  app.conf  collections.conf  inputs.conf  macros.conf  restmap.conf  savedsearches.conf  server.conf  ta-eclecticiq.conf  transforms.conf  web.conf  workflow_actions.conf
sourcecode/TA-eclecticiq/default/data/ui/alerts/: create_eclecticiq_sighting.html
sourcecode/TA-eclecticiq/default/data/ui/nav/: default.xml
sourcecode/TA-eclecticiq/default/data/ui/views/: create_sighting_dashboard.xml  eiq_app_logs.xml  eiq_db_info.xml  eiq_matches.xml  eiq_matches_by_domain.xml  eiq_matches_by_email.xml  eiq_matches_by_filehashes.xml  eiq_matches_by_ip.xml  home.xml  setup_view_dashboard.xml
