[TA-eclecticiq]
name = TA-eclecticiq
version = attr: 1.0.0
url = https://github.com/nitesh-sacumen/EIQ
license = Private
author = Sacumen
author_email = pranav.kalariya@sacumen.com
maintainer = Sacumen
maintainer_email = pranav.kalariya@sacumen.com
description = Parser Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir = = app
include_package_data = true
zip_safe = false
python_requires = >= 3.6
bdist_wheel =
    universal = false
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = app

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    app/
    tests

[coverage:paths]
source =
    app/

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 200
per-file-ignores =
    # __init__ module exports names
    EIQ/app/__init__.py: F401
exclude = .venv/, tests/*

[pydocstyle]
match = (?!test_).*\.py
match_dir = ^(?!(.venv|old|tests).*)




[pylint]
ignore = tests
persistent = no
load-plugins = pylint_common, pylint_flask, pylint_plugin_utils
unsafe-load-any-extension = no
max-line-length = 200

[pylint.messages_control]
disable = C0411,F0401,R0902,W0212,C0302,W0703,R0801,R1710,R0913,R0914,R0903,W1202,C0412

[mypy]
files = app
python_version = 3.6
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-asgiref.*]
ignore_missing_imports = True

[mypy-qpylib.*]
ignore_missing_imports = True

[mypy-flask.*]
ignore_missing_imports = True

[mypy-flask_wtf.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-dotenv.*]
ignore_missing_imports = True

[mypy-cryptography.*]
ignore_missing_imports = True
# mode = full
# isActive = False
